Bug 91467 - Juk exits (crashes?) when reaching end of playlist
Summary: Juk exits (crashes?) when reaching end of playlist
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
: 88481 91254 91477 91523 91956 92043 92132 92179 92235 92485 92518 92539 92733 92742 93116 93124 93337 93555 93610 93856 96222 96674 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-10-16 20:03 UTC by Bianca van Schaik
Modified: 2005-01-10 00:08 UTC (History)
23 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bianca van Schaik 2004-10-16 20:03:51 UTC
Version:           2.1.1 (using KDE 3.3.1, compiled sources)
Compiler:          gcc version 3.4.1 20040601 (prerelease)
OS:                Linux (i686) release 2.6.7

After the last song in any playlist has finished playing, Juk suddenly exits.
I'm still not sure whether it's a crash or not: the exit status of Juk is 0, the KDE crash handler doesn't kick in, but settings which were changed before Juk exited aren't saved, so in any case it's not a 'proper' exit.
Comment 1 Scott Wheeler 2004-10-16 20:08:37 UTC
Hmm.  I already fixed this in the main development branch of CVS; I didn't realize that Michael had backported his changes that caused the crash to the 3.3 branch.  I'll fix it there shortly.
Comment 2 Scott Wheeler 2004-10-16 20:36:28 UTC
CVS commit by wheeler: 

Didn't realize that this had gone into the branch as well.  Backporting my changes:

Doing some clean up so that there's a clean split between the visible item
and the current item in the PlaylistCollection.  The current item should
always correspond to the playlist-like methods -- playing things, advancing
tracks, etc.  The visible playlist is useful for things like the tag editor
and k3b exporter.

BUG:91467


  M +2 -2      k3bexporter.cpp   1.5.2.1
  M +7 -4      playlistbox.cpp   1.116.2.7
  M +1 -1      playlistbox.h   1.66.2.4
  M +3 -3      playlistsplitter.cpp   1.181.2.2
  M +4 -18     statuslabel.cpp   1.31.2.3



Comment 3 Scott Wheeler 2004-10-16 22:00:15 UTC
*** Bug 91477 has been marked as a duplicate of this bug. ***
Comment 4 Michael Pyne 2004-10-17 23:11:47 UTC
*** Bug 91523 has been marked as a duplicate of this bug. ***
Comment 5 Michael Pyne 2004-10-23 00:56:34 UTC
*** Bug 91254 has been marked as a duplicate of this bug. ***
Comment 6 Scott Wheeler 2004-10-23 15:43:47 UTC
*** Bug 91956 has been marked as a duplicate of this bug. ***
Comment 7 Scott Wheeler 2004-10-25 05:33:58 UTC
*** Bug 92043 has been marked as a duplicate of this bug. ***
Comment 8 Scott Wheeler 2004-10-26 14:47:13 UTC
*** Bug 92132 has been marked as a duplicate of this bug. ***
Comment 9 Michael Pyne 2004-10-27 02:23:37 UTC
*** Bug 92179 has been marked as a duplicate of this bug. ***
Comment 10 Scott Wheeler 2004-10-30 00:13:32 UTC
*** Bug 92235 has been marked as a duplicate of this bug. ***
Comment 11 Scott Wheeler 2004-10-31 21:27:40 UTC
*** Bug 92485 has been marked as a duplicate of this bug. ***
Comment 12 Scott Wheeler 2004-11-01 14:05:05 UTC
*** Bug 92518 has been marked as a duplicate of this bug. ***
Comment 13 Scott Wheeler 2004-11-01 19:44:56 UTC
*** Bug 92539 has been marked as a duplicate of this bug. ***
Comment 14 Scott Wheeler 2004-11-02 02:24:05 UTC
*** Bug 88481 has been marked as a duplicate of this bug. ***
Comment 15 Scott Wheeler 2004-11-05 14:13:53 UTC
*** Bug 92742 has been marked as a duplicate of this bug. ***
Comment 16 Scott Wheeler 2004-11-12 02:30:48 UTC
*** Bug 93116 has been marked as a duplicate of this bug. ***
Comment 17 Scott Wheeler 2004-11-12 02:33:18 UTC
*** Bug 93124 has been marked as a duplicate of this bug. ***
Comment 18 Scott Wheeler 2004-11-15 23:58:18 UTC
*** Bug 93337 has been marked as a duplicate of this bug. ***
Comment 19 Scott Wheeler 2004-11-19 09:31:06 UTC
*** Bug 93555 has been marked as a duplicate of this bug. ***
Comment 20 Scott Wheeler 2004-11-19 11:59:27 UTC
*** Bug 92733 has been marked as a duplicate of this bug. ***
Comment 21 Scott Wheeler 2004-11-20 00:48:42 UTC
*** Bug 93610 has been marked as a duplicate of this bug. ***
Comment 22 Scott Wheeler 2004-11-24 18:15:15 UTC
*** Bug 93856 has been marked as a duplicate of this bug. ***
Comment 23 Matthew Bevan 2004-11-25 18:20:18 UTC
May be resolved in CVS, but latest Slackware package download and Gentoo emerge continue to have the issue.  Specifically, if I allow JuK to reach the end of it's playlist, it begins to consume all system resources until it is killed forcefully by the Kernel.  In 2/3 cases, all I have to do is wait 2 minutes, and JuK dies - no crash handler.  In the remaining 1/3, my Slackware system's running X server also begins to go haywire, and the entire system goes down.

Running without forking (and without the crash handler) produces a "Segmentation fault" without core.
Comment 24 Scott Wheeler 2004-11-25 19:43:22 UTC
There hasn't been a release yet since this fix went in.  3.3.2 will be out shortly and contains this fix.
Comment 25 Scott Wheeler 2005-01-03 17:20:39 UTC
*** Bug 96222 has been marked as a duplicate of this bug. ***
Comment 26 Scott Wheeler 2005-01-10 00:08:33 UTC
*** Bug 96674 has been marked as a duplicate of this bug. ***